API - minor fixes to index endpoint documentation
