# app/Http/Controllers/Api/ArtistController.php
@@ -21,7 +21,7 @@ class ArtistController extends Controller
      *     @OA\Response(
      *         response=200,
      *         description="Successful",
-     *         @OA\JsonContent(@OA\Items(ref="#/components/schemas/ArtistResource"))
+     *         @OA\JsonContent(@OA\Property(property="artists",type="array", @OA\Items(ref="#/components/schemas/ArtistResource")))
      *     )
      * )
      *
