# app/Http/Controllers/Api/EntryController.php
@@ -21,7 +21,7 @@ class EntryController extends Controller
      *     @OA\Response(
      *         response=200,
      *         description="Successful",
-     *         @OA\JsonContent(@OA\Items(ref="#/components/schemas/EntryResource"))
+     *         @OA\JsonContent(@OA\Property(property="entries",type="array", @OA\Items(ref="#/components/schemas/EntryResource")))
      *     )
      * )
      *
