# app/Http/Controllers/Api/ExternalResourceController.php
@@ -21,7 +21,7 @@ class ExternalResourceController extends Controller
      *     @OA\Response(
      *         response=200,
      *         description="Successful",
-     *         @OA\JsonContent(@OA\Items(ref="#/components/schemas/ExternalResourceResource"))
+     *         @OA\JsonContent(@OA\Property(property="resources",type="array", @OA\Items(ref="#/components/schemas/ExternalResourceResource")))
      *     )
      * )
      *
