# app/Http/Controllers/Api/ThemeController.php
@@ -21,7 +21,7 @@ class ThemeController extends Controller
      *     @OA\Response(
      *         response=200,
      *         description="Successful",
-     *         @OA\JsonContent(@OA\Items(ref="#/components/schemas/ThemeResource"))
+     *         @OA\JsonContent(@OA\Property(property="themes",type="array", @OA\Items(ref="#/components/schemas/ThemeResource")))
      *     )
      * )
      *
